cabal-version:      2.2
name:               beam-mysql
version:            0.3.1.1
synopsis:           Connection layer between beam and MySQL/MariaDB
description:
  Beam driver for MySQL or MariaDB databases, two popular open-source databases.
  Supports most beam features, but does not yet have support for "beam-migrate".

homepage:           https://github.com/juspay/beam-mysql
bug-reports:        https://github.com/juspay/beam-mysql/issues
license:            MIT
license-file:       LICENSE.md
author:             Travis Athougies, Koz Ross
maintainer:         koz.ross@retro-freedom.nz
copyright:          Juspay Technologies Pvt Ltd (C) 2020
category:           Database
build-type:         Simple
tested-with:        GHC ==8.8.3
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/juspay/beam-mysql.git

library
  exposed-modules:
    Database.Beam.MySQL
    Database.Beam.MySQL.Connection
    Database.Beam.MySQL.Syntax

  other-modules:      Database.Beam.MySQL.FromField
  build-depends:
    , aeson             >=1.4.7.1   && <2.0.0.0
    , attoparsec        ^>=0.13.2.4
    , base              >=4.13      && <5.0
    , beam-core         ^>=0.8.1.0
    , bytestring        ^>=0.10.10.0
    , case-insensitive  ^>=1.2.1.0
    , free              ^>=5.1.3
    , hashable          ^>=1.3
    , mtl               ^>=2.2.2
    , mysql             ^>=0.1.7
    , network-uri       ^>=2.6.3.0
    , scientific        ^>=0.3.6.2
    , text              ^>=1.2.4.0
    , time              ^>=1.9.3

  default-language:   Haskell2010
  default-extensions:
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    TupleSections

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror

  hs-source-dirs:     src
