name:          beam-mysql
version:       0.3.0.0
synopsis:      Connection layer between beam and MySQL/MariaDB
description:
  Beam driver for MySQL or MariaDB databases, two popular open-source databases.
  Supports most beam features, but does not yet have support for "beam-migrate".

homepage:      https://github.com/tathougies/beam-mysql
license:       MIT
license-file:  LICENSE
author:        Travis Athougies
maintainer:    travis@athougies.net
category:      Database
build-type:    Simple
cabal-version: 1.18
bug-reports:   https://github.com/tathougies/beam-mysql/issues

library
  exposed-modules:
    Database.Beam.MySQL
    Database.Beam.MySQL.Connection
    Database.Beam.MySQL.FromField
    Database.Beam.MySQL.Syntax

  build-depends:
      aeson             >=0.11 && <1.5
    , attoparsec
    , base              >=4.7  && <5.0
    , beam-core         >=0.8  && <0.10
    , bytestring        >=0.10 && <0.11
    , case-insensitive  >=1.2  && <1.3
    , free              >=4.12 && <5.2
    , hashable          >=1.1  && <1.4
    , mtl               >=2.1  && <2.3
    , mysql             >=0.1  && <0.2
    , network-uri
    , scientific        >=0.3  && <0.4
    , text              >=1.0  && <1.3
    , time              >=1.6  && <1.10

  default-language:   Haskell2010
  default-extensions:
    CPP
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    MultiParamTypeClasses
    OverloadedStrings
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  ghc-options:        -Wall

  if flag(werror)
    ghc-options: -Werror

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

test-suite escaping
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
      base
    , beam-core
    , beam-mysql
    , bytestring
    , fmt
    , hspec
    , text
    , vector

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  hs-source-dirs:   test/escaping
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tathougies/beam-mysql.git
